# kagent-memory

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: quickstart.md
examples/: agent-with-memory.yaml  memory-config.yaml
helm/kagent-memory/: Chart.yaml  values.yaml
helm/kagent-memory/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  secret.yaml  service.yaml  serviceaccount.yaml
src/kagent_memory/: __init__.py  cli.py  config.py  models.py
src/kagent_memory/api/: __init__.py  routes.py
src/kagent_memory/chunking/: __init__.py  base.py  fixed_size.py
src/kagent_memory/embeddings/: __init__.py  base.py  openai.py
src/kagent_memory/service/: __init__.py  memory_service.py
src/kagent_memory/vectordb/: __init__.py  base.py  qdrant.py
tests/: __init__.py  conftest.py  test_api.py  test_chunking.py  test_service.py
