[project]
name = "kagent-memory"
version = "0.1.0"
description = "Long-term memory service for Kagent platform using Vector DB and OpenAI embeddings"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Corentin Dekimpe", email = "corentin@dekimpe.dev" }
]
keywords = ["kagent", "memory", "vector-database", "qdrant", "openai", "embeddings", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "openai>=1.50.0",
    "qdrant-client>=1.12.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "testcontainers>=4.8.0",
]

[project.scripts]
kagent-memory = "kagent_memory.cli:main"

[project.urls]
Homepage = "https://github.com/cdekimpe/kagent-memory"
Repository = "https://github.com/cdekimpe/kagent-memory"
Documentation = "https://github.com/cdekimpe/kagent-memory#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kagent_memory"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "B008",  # function-call-in-default-argument - FastAPI Depends pattern
    "B905",  # zip-without-explicit-strict - not needed for our use case
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
